# blindspot

./: .gitignore  README.md  bootstrap.sh  project.yml  pyproject.toml  timeline.md
BlindSpot/App/: BlindSpotApp.swift
BlindSpot/Components/: BSCard.swift  FlagButton.swift  HazardBadge.swift  PrimaryButton.swift  StatTile.swift
BlindSpot/Config/: Secrets.example.swift
BlindSpot/Models/: Enums.swift  Hazard.swift  Profile.swift  Ride.swift  RideAISummary.swift  RideEvent.swift  RidePhoto.swift  RidePoint.swift
BlindSpot/Navigation/: RootTabView.swift  RootView.swift
BlindSpot/Services/: AppEnvironment.swift  HazardRepository.swift  ProfileRepository.swift  RideRepository.swift
BlindSpot/Theme/: Color+BlindSpot.swift  Font+BlindSpot.swift
BlindSpot/Utilities/: ContactPicker.swift  Formatters.swift  MailView.swift  MessageComposeView.swift  UIApplication+TopVC.swift
computer_vision/: README.md  analyze_bike_accessibility.py  download_model.py  fetch_weights.py  main.py  pyproject.toml  stream_extract_model.py  test_lane_detection.py
device/: __init__.py
device/blindspot_device/: __init__.py  app.py  ble_bridge.py  button.py  camera.py  config.py  feedback.py  gps.py  imu.py  led_strip.py  phone_bridge.py  ride_summary.py  (+5 more)
iphone-demo/: app.js  config.example.js  index.html  styles.css
ml/: __init__.py  detect_hazards.py
supabase/: blindspot_device_schema.sql
tests/: test_ble_bridge.py  test_button.py  test_imu.py  test_phone_bridge.py  test_ride_summary.py  test_serial_bridge.py  test_store_metrics.py  test_summary_service.py  test_supabase_sync.py
(+40 files in other folders)
