[project]
name = "blindspot"
version = "0.1.0"
description = "Blind Spot Raspberry Pi capture and hazard detection prototype"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
pi = [
    "pyserial>=3.5",
    "gpiozero>=2.0",
    "adafruit-circuitpython-neopixel>=6.3.15",
    "supabase>=2.15.0",
    "requests>=2.32.0",
]
ml = ["ultralytics>=8.3.0"]
dev = ["pytest>=8.0", "ruff>=0.11.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
